Enable NVENC GPU encoding and multi-deployment support
- Add 'video' GPU capability for NVENC support in Windows Docker Desktop
- Restructure compose files (base, override, remote) for flexible deployment
- Integrate Sunshine v0.23.1 with Xvfb virtual display
- Add ultrawide resolution support (up to 5120x1440 @ 120 FPS)
- Include Kubernetes manifests and deployment scripts
- Document NVENC configuration and verification steps
- Add quick start scripts for Windows/Linux/Mac
- Console logging enabled for Sunshine with [sunshine] prefix
- Official Sunshine Docker port ranges (47984-47990, 48010, 47998-48000)

GPU encoding now works with RTX GPUs on Windows Docker Desktop!
Sunshine detects h264_nvenc and hevc_nvenc encoders successfully.

--- a/docker/ubuntu/.env.example
+++ b/docker/ubuntu/.env.example
@@ -15,8 +15,35 @@ TIMEZONE=America/New_York
 GIT_USER_NAME=Your Name
 GIT_USER_EMAIL=your.email@example.com
 
-# Workspace path (Windows path to your projects)
-WORKSPACE_PATH=C:\Users\YourUsername\Projects
+# Remote Access Options
+# Choose your preferred remote access method based on use case:
+#
+# RDP (xrdp) - Default, Windows native client, moderate latency (50-150ms)
+ENABLE_RDP=true
+#
+# X2Go - Better performance (10-30ms), requires X2Go client
+ENABLE_X2GO=false
+#
+# SSH - Required for X2Go, useful for terminal access
+ENABLE_SSH=true
+#
+# Sunshine/Moonlight - BEST performance (5-15ms, 60 FPS), GPU-accelerated streaming
+#   Sunshine runs IN the container, captures the desktop, streams to Moonlight client
+#   GPU encoding for ultra-low latency
+ENABLE_SUNSHINE=true
+#   Optionally disable RDP to save resources when using Sunshine:
+#   ENABLE_RDP=false
 
-# Docker Host (usually not needed on Windows with Docker Desktop)
-# DOCKER_HOST=unix:///var/run/docker.sock
+# Port mapping (change if ports are in use)
+RDP_PORT=3389
+SSH_PORT=2222
+
+# Resource limits
+CPU_LIMIT=8
+MEMORY_LIMIT=16G
+CPU_RESERVATION=4
+MEMORY_RESERVATION=8G
+
+# NVIDIA GPU support
+NVIDIA_VISIBLE_DEVICES=all
+NVIDIA_DRIVER_CAPABILITIES=all
