--- a/src/ubuntu/.gitattributes
+++ b/src/ubuntu/.gitattributes
@@ -4,7 +4,7 @@ entrypoint.sh text eol=lf
 
 # Docker files
 Dockerfile text eol=lf
-docker-compose.yml text eol=lf
+compose*.yaml text eol=lf
 
 # Markdown and documentation
 *.md text eol=lf
